--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'French literature -- 19th century -- History and criticism'
 - !lcc 'PQ'
 - !lcsh 'Authors, French'
+- GITenberg
 tableOfContents: Guy de Maupassant -- André Theuriet -- Marcel Prévost -- Paul Margueritte
   -- Gilbert Augustin-Thierry -- Édouard Rod -- Stéphane Mallarmé -- Stanley -- Guillaume
   II -- Dom Pedro -- Renan -- Billets du matin.
